--- a/.gitignore
+++ b/.gitignore
@@ -309,3 +309,6 @@ vignettes/*.pdf
 # End of https://www.gitignore.io/api/r,latex
 
 /Source/Journals/Entropies/NonParametricHGI0.pdf
+/Projects/UNGS2020/proyectoSAR_2.pdf
+/Projects/UNGS2020/proyectoSAR_3.pdf
+/Source/Journals/PaperTesis/CassettiFrery.pdf
