--- a/.gitignore
+++ b/.gitignore
@@ -312,3 +312,4 @@ vignettes/*.pdf
 /Projects/UNGS2020/proyectoSAR_2.pdf
 /Projects/UNGS2020/proyectoSAR_3.pdf
 /Source/Journals/PaperTesis/CassettiFrery.pdf
+Source/Conference/CISS2021/CassettiDelgadinoReyFrery_2.pdf
