Iniciando la revisión

--- a/.gitignore
+++ b/.gitignore
@@ -313,3 +313,5 @@ vignettes/*.pdf
 /Projects/UNGS2020/proyectoSAR_3.pdf
 /Source/Journals/PaperTesis/CassettiFrery.pdf
 Source/Conference/CISS2021/CassettiDelgadinoReyFrery_2.pdf
+Source/Journals/DTTeorico/CassettiRialFrery.pdf
+Source/Journals/PaperTesis/CassettiFreryR1.pdf
