--- a/.gitignore
+++ b/.gitignore
@@ -315,3 +315,4 @@ vignettes/*.pdf
 Source/Conference/CISS2021/CassettiDelgadinoReyFrery_2.pdf
 Source/Journals/DTTeorico/CassettiRialFrery.pdf
 Source/Journals/PaperTesis/CassettiFreryR1.pdf
+Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
