Durante la charla com Julia

--- a/.gitignore
+++ b/.gitignore
@@ -317,3 +317,4 @@ Source/Journals/DTTeorico/CassettiRialFrery.pdf
 Source/Journals/PaperTesis/CassettiFreryR1.pdf
 Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
 Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
+Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
