Primera leída del texto

--- a/.gitignore
+++ b/.gitignore
@@ -318,3 +318,6 @@ Source/Journals/PaperTesis/CassettiFreryR1.pdf
 Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
 Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
 Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
+Figures/PaperTesis/Asymptotic_n500_TodoAlfa.pdf
+.README.md.icloud
+README.md
