--- a/.gitignore
+++ b/.gitignore
@@ -321,3 +321,4 @@ Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
 Figures/PaperTesis/Asymptotic_n500_TodoAlfa.pdf
 .README.md.icloud
 README.md
+Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
