Artículo y carta revisados

--- a/.gitignore
+++ b/.gitignore
@@ -322,3 +322,6 @@ Figures/PaperTesis/Asymptotic_n500_TodoAlfa.pdf
 .README.md.icloud
 README.md
 Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
+Source/Journals/PaperTesis/CassettiFreryR1.pdf
+Source/Journals/PaperTesis/CassettiFreryR1.pdf
+Source/Journals/PaperTesis/Revision Files/Rev01/Responses.pdf
